# Eden

./: .env.eden  .gitignore  .python_exe  10_PERCENT_MONTHLY_OPTIMIZATION.md  10_percent_trading_plan.json  50ITER_FILES_MANIFEST.md  ACHIEVEMENT_SUMMARY.txt  API_ENDPOINTS.md  AUTORESILIENCY_QUICKSTART.md  AWS_AUTORESILIENCY.md  AWS_SETUP.md  BACKTEST_$100_6MONTH.md  BACKTEST_$100_REALISTIC.md  BACKTEST_3MONTH_ANALYSIS.md  BACKTEST_ANALYSIS_REAL_MT5.md  BACKTEST_EXECUTIVE_SUMMARY.md  BACKTEST_MT5_REAL_6MONTH.md  BACKTEST_RESULTS_ANALYSIS.md  BACKTEST_SETUP_COMPLETE.md  BACKTEST_VIX_MT5_RESULTS.md  BASE_BACKTEST_RESULTS.md  BOT_RESTART_COMPLETE.md  BOT_SUMMARY.txt  CHANGELOG_SYMBOL_REMOVAL.md  CMakeLists.txt  COMPLETION_SUMMARY.txt  CONNECTION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  FINAL_BACKTEST_REPORT.md  FINAL_CONFIGURATION_SUMMARY.md  FINAL_VERIFICATION.ps1  IMPLEMENTATION_GUIDE.md  INTEGRATION_COMPLETE.md  LINUX_SETUP_GUIDE.md  LIVE_DEPLOYMENT_CHECKLIST.md  MOBILE_APP_SETUP.md  (+177 more)
EdenIOSApp/: MT5_ACCOUNT_SETUP.md  VISUAL_GUIDE.md  iOS_APP_READY.md
aurora-web/: README.md  next.config.js  package.json  tailwind.config.js
backend/: Dockerfile  START_BACKEND.bat  START_BACKEND_FIXED.bat  START_BACKEND_HTTPS.bat  api_service.py  eden_trading.db  generate_duckdns_cert.py  generate_ssl.py  generate_ssl_cert.ps1  main.py  requirements.txt  run_uploader.bat  status_uploader.py  test_all_endpoints.py  uploader_config.json  uploader_task.xml
config/: 10_percent_config.yaml  README.md  commission_beating_scalp.yaml  config.yaml  default.yaml  ict_pa.yml  ma_v1_2.yml  optimal_micro_account.json  raw_spread_config.yaml  scalping_config.yaml  secondary_ict_ml.yaml  strategy.yml  strategy_configs.json  volatility_burst.yml
docs/: AGGRESSIVE_CONFIG_RESULTS.md  ARCHITECTURE.md  BACKTESTING.md  BOT_FIX_SUMMARY.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  DUCKDNS_SETUP.md  ENHANCEMENT_COMPLETE.md  NEXT_STEPS.md  PORTFOLIO_TUNING_2025-12-05.md  PROFITABLE_STRATEGIES_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RESEARCH_LOG.md  RISK_MANAGEMENT.md  STRATEGIES.md  STRATEGY_EMA_CROSSOVER_TREND.md  STRATEGY_GUIDE.md  STRATEGY_ML_ENHANCED.md
infrastructure/: autonomous_optimizer.py  bot_runner.py  config.yaml  create_scheduled_tasks.ps1  eden.bat  install_service.ps1  ml_strategy_generator.py  run_optimization.py  start_api.bat  start_bot.bat  start_optimizer.bat  start_tailscale.bat
ios/: ApiEndpoints.ts  BUG_FIX_COMPLETE.md  ENDPOINT_TEST_SUMMARY.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.sh  SETUP_CHECKLIST.md  WIDGETS_SETUP.md
lambda/: ecs_health_monitor.py  eventbridge-pattern.json  lambda-permissions-policy.json  update_api_gateway.py
macos/: .gitignore  BACKEND_INTEGRATION_SUMMARY.md  ENDPOINT_MAPPING.md  IMPLEMENTATION_ROADMAP.md  MISSING_ENDPOINTS.md  SPRINT1_COMPLETE.md  SPRINT1_SUMMARY.md  SPRINT2_COMPLETE.md  SPRINT2_SUMMARY.md  SPRINT3_COMPLETE.md  SPRINT3_SUMMARY.md  SPRINT4_SUMMARY.md  SPRINT5_SUMMARY.md
models/: feature_alignment.json  registry.json
reports/: combined_backtest_mt5.json  combined_ictpa_ma_optimization.json  combined_live_sim_summary.json  combined_live_sim_trades.csv  combined_portfolio_10.json  combined_portfolio_100.json  combined_portfolio_50.json  comprehensive_backtest_results.json  continued_research.json  creative_final_results.json  edge_diagnostic.json  extended_backtest_24mo.json  fast_ml_results.json  git_repo_summary.json  high_freq_results.json  ict_pa_backtest.json  ict_pa_optimization.json  (+25 more)
(+432 files in other folders)
